--- a/build.gradle
+++ b/build.gradle
@@ -295,7 +295,8 @@ configure(allprojects) { project ->
 		}
 		repositories {
 			mavenCentral()
-			maven { url "https://repo.spring.io/libs-spring-framework-build" }
+//			maven { url "https://repo.spring.io/libs-spring-framework-build" }
+			maven { url "https://maven.aliyun.com/repository/central" }
 		}
 	}
 	configurations.all {
