--- a/settings.gradle
+++ b/settings.gradle
@@ -32,6 +32,7 @@ include "spring-webflux"
 include "spring-websocket"
 include "framework-bom"
 include "integration-tests"
+include 'spring-num'
 
 rootProject.name = "spring"
 rootProject.children.each {project ->
