--- a/build.gradle
+++ b/build.gradle
@@ -294,9 +294,12 @@ configure(allprojects) { project ->
 			cacheChangingModulesFor 0, "seconds"
 		}
 		repositories {
-			mavenCentral()
+//			mavenCentral()
 //			maven { url "https://repo.spring.io/libs-spring-framework-build" }
+            //替换为阿里云仓库
 			maven { url "https://maven.aliyun.com/repository/central" }
+            //由于阿里云仓库 Could not find com.ibm.websphere:uow:6.0.2.17无法找到，添加springsource仓库
+            maven { url "http://repo.springsource.org/plugins-release" }
 		}
 	}
 	configurations.all {
