--- a/spring-num/spring-num.gradle
+++ b/spring-num/spring-num.gradle
@@ -13,5 +13,6 @@ dependencies {
     compile(project(":spring-beans"))
     compile(project(":spring-core"))
     compile(project(":spring-context"))
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile(project(":spring-context"))
+    compile group: 'junit', name: 'junit', version: '4.10'
 }
